服务端可配置更新模式是 Cover 还是 NewInstall

--- a/HHUpdateApp/app.config
+++ b/HHUpdateApp/app.config
@@ -14,7 +14,7 @@
 			</setting>
 			<!--服务地址：HHUpdateApp.exe将下载此处提供的HHversions.json文件（包含版本更新信息的JSON文件）-->
 			<setting name="ServerUpdateUrl" serializeAs="String">
-				<value>http://localhost:8020/HHversions.json</value>
+				<value>http://localhost:9000/api/test</value>
 			</setting>
 			<!--非必要参数，用于记录忽略的一个版本号：检查更新时会忽略这个版本的更新-->
 			<setting name="LocalIgnoreVer" serializeAs="String">
