给服务端项目添加 webpack 打包支持

--- a/UpdateServer/UpdateServer.csproj
+++ b/UpdateServer/UpdateServer.csproj
@@ -9,6 +9,7 @@
     <Content Include="index.html" />
     <Content Include="routes\api.js" />
     <Content Include="routes\index.js" />
+    <Content Include="webpack.config.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".prettierrc" />
