--- a/UpdateServer/web.config
+++ b/UpdateServer/web.config
@@ -13,6 +13,7 @@
       </rules>
     </rewrite>
     <!-- <iisnode promoteServerVars="REMOTE_ADDR" /> -->
-    <iisnode promoteServerVars="REMOTE_ADDR" watchedFiles="*.js;node_modules\*;routes\*.js" nodeProcessCommandLine="C:\Program Files\nodejs\node.exe"/>
+    <iisnode promoteServerVars="REMOTE_ADDR" watchedFiles="app.js" nodeProcessCommandLine="C:\Program Files\nodejs\node.exe"/>
+    <!--<iisnode promoteServerVars="REMOTE_ADDR" watchedFiles="*.js;node_modules\*;routes\*.js;views\*.ejs" nodeProcessCommandLine="C:\Program Files\nodejs\node.exe"/>-->
   </system.webServer>
 </configuration>
