--- a/UpdateServer/package.json
+++ b/UpdateServer/package.json
@@ -2,19 +2,24 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "prod": "pm2 start process.json",
+    "dev": "set NODE_ENV=development && nodemon app.js",
+    "prod": "set NODE_ENV=production && pm2 start process.json",
+    "build": "set NODE_ENV=production && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.0.0-alpha.7",
-    "multer": "^1.4.1",
-    "uuid": "^3.3.2"
+    "express": "^5.0.0-alpha.8",
+    "multer": "^1.4.2",
+    "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^9.0.1",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
   }
 }
