--- a/UpdateServer/package.json
+++ b/UpdateServer/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.0.0-alpha.8",
+    "express-session": "^1.17.2",
     "multer": "^1.4.2",
     "uuid": "^3.4.0"
   },
