--- a/UpdateServer/package.json
+++ b/UpdateServer/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "set NODE_ENV=development && nodemon app.js",
-    "prod": "set NODE_ENV=production && pm2 start process.json",
+    "pm2": "set NODE_ENV=production && pm2 start process.json",
     "build": "set NODE_ENV=production && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
