--- a/UpdateServer/package.json
+++ b/UpdateServer/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
+    "filemanager-webpack-plugin": "^6.1.4",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
   }
